--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-scripts": "0.4.0"
   },
   "dependencies": {
+    "immutable": "^3.8.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
