--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "shortid": "^2.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
