--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
-    "shortid": "^2.2.6"
+    "shortid": "^2.2.6",
+    "skeleton-css": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
