--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "enzyme": "^2.4.1",
+    "mockdate": "^1.0.4",
     "react-addons-test-utils": "^15.3.1",
     "react-scripts": "0.4.0"
   },
